# handler/user_handler.go
@@ -1,121 +1,175 @@
 package handler
 
-// import (
-// 	"database/sql"
-// 	"fmt"
-// 	"net/http"
+import (
+	"database/sql"
+	"example/hello/model"
+	"example/hello/repository"
+	"fmt"
+	"net/http"
 
-// 	"github.com/gin-gonic/gin"
-// )
+	"github.com/gin-gonic/gin"
+)
 
-// type Env struct {
-// 	db *sql.DB
-// }
+type UserHandler struct {
+	DB *sql.DB
+}
 
-// func (e *Env) GetUserHandler(c *gin.Context) {
+// @summary Get User
+// @description  Get User by id
+// @tags users
+// @security ApiKeyAuth
+// @id GetUser
+// @accept json
+// @produce json
+// @param id path int true "id of customer to be gotten"
+// @response 200 {object} model.User "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 409 {object} model.Response "Conflict"
+// @response 500 {object} model.Response "Internal Server Error"
+// @Router /api/v1/users/:id [get]
+func (h UserHandler) GetUserHandler(c *gin.Context) {
 
-// 	userId := c.Param("id")
-// 	fmt.Print(userId)
-// 	// Convert 'id' to an integer
-// 	//userID, err := strconv.Atoi(idStr)
+	userId := c.Param("id")
 
-// 	// Call the GetUser function to fetch the user data from the database
-// 	user, err := GetUser(userId)
-// 	if err != nil {
-// 		c.IndentedJSON(http.StatusNotFound, gin.H{"message": "User not found"})
-// 		return
-// 	}
-// 	// Convert the user object to JSON and send it in the response
-// 	c.IndentedJSON(http.StatusOK, user)
-// }
+	// Call the GetUser function to fetch the user data from the database
+	userRepository := repository.UserRepository{
+		DB: h.DB,
+	}
+	user, err := userRepository.GetUser(userId)
+	if err != nil {
+		c.IndentedJSON(http.StatusNotFound, gin.H{"message": "User not found"})
+		return
+	}
+	// Convert the user object to JSON and send it in the response
+	c.IndentedJSON(http.StatusOK, user)
+}
 
-// func GetUser(id string) (*model.User, error) {
-// 	query := "SELECT * FROM users WHERE id = ?"
-// 	row := db.QueryRow(query, id)
+// GetCustomer godoc
+// @summary List User
+// @description  Get all user
+// @tags users
+// @security ApiKeyAuth
+// @id ListUsers
+// @accept json
+// @produce json
+// @response 200 {object} model.Users "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 409 {object} model.Response "Conflict"
+// @response 500 {object} model.Response "Internal Server Error"
+// @Router /api/v1/customers/:id [get]
+func (h UserHandler) ListUserHandler(c *gin.Context) {
 
-// 	user := &model.User{}
-// 	err := row.Scan(&user.ID, &user.Name, &user.Email)
-// 	if err != nil {
-// 		return nil, err
-// 	}
-// 	return user, nil
-// }
+	// Call the GetUser function to fetch the user data from the database
+	userRepository := repository.UserRepository{
+		DB: h.DB,
+	}
+	users, err := userRepository.GetAllUser()
+	fmt.Print(err)
+	//fmt.Print(users)
+	if err != nil {
+		c.IndentedJSON(http.StatusNotFound, gin.H{"message": "User not found"})
+		return
+	}
+	// Convert the user object to JSON and send it in the response
+	c.IndentedJSON(http.StatusOK, users)
+}
 
-// func CreateUserHandler(c *gin.Context) {
-// 	var newUser model.User
-// 	var err error
-// 	// Call BindJSON to bind the received JSON to
-// 	// newAlbum.
-// 	if err := c.BindJSON(&newUser); err != nil {
-// 		return
-// 	}
+// CreateUser godoc
+// @summary Create User
+// @description Create new user
+// @tags users
+// @security ApiKeyAuth
+// @id CreateUser
+// @accept json
+// @produce json
+// @param Customer body model.UserForCreate true "User data to be created"
+// @response 200 {object} model.Response "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 500 {object} model.Response "Internal Server Error"
+// @Router /api/v1/users [post]
+func (h UserHandler) CreateUserHandler(c *gin.Context) {
+	var newUser model.User
+	var err error
+	// Call BindJSON to bind the received JSON to
+	// newAlbum.
+	if err := c.BindJSON(&newUser); err != nil {
+		return
+	}
 
-// 	// insert into database
-// 	id, err := CreateUser(newUser.Name, newUser.Email)
-// 	if err != nil {
-// 		c.IndentedJSON(http.StatusInternalServerError, "failed to create user")
-// 		return
-// 	}
-// 	newUser.ID = id
-// 	c.IndentedJSON(http.StatusCreated, newUser)
-// }
-// func CreateUser(name, email string) (int64, error) {
+	// insert into database
+	userRepository := repository.UserRepository{
+		DB: h.DB,
+	}
+	id, err := userRepository.CreateUser(newUser.Name, newUser.Email)
+	if err != nil {
+		c.IndentedJSON(http.StatusInternalServerError, "failed to create userxxxx")
+		return
+	}
+	newUser.ID = id
+	c.IndentedJSON(http.StatusCreated, newUser)
+}
 
-// 	query := "INSERT INTO users (name, email) VALUES (?, ?)"
-// 	result, err := db.Exec(query, name, email)
-// 	if err != nil {
-// 		return 0, fmt.Errorf("addAlbum: %v", err)
-// 	}
-// 	id, err := result.LastInsertId()
-// 	if err != nil {
-// 		return 0, err
-// 	}
-// 	return id, nil
-// }
+// DeleteCustomer godoc
+// @summary Delete User
+// @description Delete user by id
+// @tags users
+// @security ApiKeyAuth
+// @id DeleteUser
+// @accept json
+// @produce json
+// @param id path int true "id of user to be deleted"
+// @response 200 {object} model.Response "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 500 {object} model.Response "Internal Server Error"
+// @Router /api/v1/users/:id [delete]
+func (h UserHandler) DeleteUserHandler(c *gin.Context) {
 
-// func UpdateUserHandler(c *gin.Context) {
-// 	userID := c.Param("id")
-// 	var oldUser model.User
-// 	//var err error
-// 	if err := c.BindJSON(&oldUser); err != nil {
-// 		return
-// 	}
-// 	err := UpdateUser(userID, oldUser.Name, oldUser.Email)
-// 	if err != nil {
-// 		c.IndentedJSON(http.StatusNotFound, gin.H{"message": "User not found"})
-// 		return
-// 	}
-// 	c.IndentedJSON(http.StatusOK, "User updated successfully")
-// }
+	userId := c.Param("id")
+	userRepository := repository.UserRepository{
+		DB: h.DB,
+	}
+	err := userRepository.DeleteUser(userId)
+	if err != nil {
+		c.IndentedJSON(http.StatusNotFound, gin.H{"message": "User not found"})
+		return
+	}
+	c.IndentedJSON(http.StatusNoContent, "User deleted  successfully")
+}
 
-// func UpdateUser(id string, name, email string) error {
-
-// 	query := "UPDATE users SET name = ?, email = ? WHERE id = ?"
-// 	_, err := db.Exec(query, name, email, id)
-// 	if err != nil {
-// 		return err
-// 	}
-// 	return nil
-// }
-
-// func DeleteUserHandler(c *gin.Context) {
-
-// 	userId := c.Param("id")
-
-// 	err := DeleteUser(userId)
-// 	if err != nil {
-// 		c.IndentedJSON(http.StatusNotFound, gin.H{"message": "User not found"})
-// 		return
-// 	}
-// 	c.IndentedJSON(http.StatusNoContent, "User deleted  successfully")
-// }
-
-// func DeleteUser(id string) error {
-
-// 	query := "DELETE FROM users WHERE id = ?"
-// 	_, err := db.Exec(query, id)
-// 	if err != nil {
-// 		return err
-// 	}
-// 	return nil
-// }
+// UpdateCustomer godoc
+// @summary Update Customer
+// @description Update customer by id
+// @tags users
+// @security ApiKeyAuth
+// @id UpdateCustomer
+// @accept json
+// @produce json
+// @param id path int true "id of user to be updated"
+// @param Customer body model.UserForUpdate true "User data to be updated"
+// @response 200 {object} model.Response "OK"
+// @response 400 {object} model.Response "Bad Request"
+// @response 401 {object} model.Response "Unauthorized"
+// @response 500 {object} model.Response "Internal Server Error"
+// @Router /api/v1/users/:id [post]
+func (h UserHandler) UpdateUserHandler(c *gin.Context) {
+	userID := c.Param("id")
+	var oldUser model.User
+	//var err error
+	if err := c.BindJSON(&oldUser); err != nil {
+		return
+	}
+	// insert into database
+	userRepository := repository.UserRepository{
+		DB: h.DB,
+	}
+	err := userRepository.UpdateUser(userID, oldUser.Name, oldUser.Email)
+	if err != nil {
+		c.IndentedJSON(http.StatusNotFound, gin.H{"message": "User not found"})
+		return
+	}
+	c.IndentedJSON(http.StatusOK, "User updated successfully")
+}
